--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -5,6 +5,17 @@
     <title>List of Pet Owners</title>
 </head>
 <body>
-<h1 th:text="'List of Pet Owners'">Index Page</h1>
+<table>
+    <tr>
+        <th>ID</th>
+        <th>First name</th>
+        <th>Last name</th>
+    </tr>
+    <tr th:each="owner : ${owners}">
+        <td th:text="${owner.id}"></td>
+        <td th:text="${owner.firstName}"></td>
+        <td th:text="${owner.lastName}"></td>
+    </tr>
+</table>
 </body>
 </html>
