--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
     <meta charset="UTF-8">
     <title>List of Pet Owners</title>
 </head>
 <body>
-<table>
+<h2>Owners</h2>
+<table class="table table-striped">
     <tr>
-        <th>ID</th>
-        <th>First name</th>
-        <th>Last name</th>
+        <th style="width: 150px;">ID</th>
+        <th style="width: 150px;">First name</th>
+        <th style="width: 150px;">Last name</th>
+
     </tr>
     <tr th:each="owner : ${owners}">
         <td th:text="${owner.id}"></td>
