--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -8,9 +8,9 @@
 <h2>Owners</h2>
 <table class="table table-striped">
     <tr>
-        <th style="width: 150px;">ID</th>
-        <th style="width: 150px;">First name</th>
-        <th style="width: 150px;">Last name</th>
+        <th>ID</th>
+        <th>First name</th>
+        <th>Last name</th>
 
     </tr>
     <tr th:each="owner : ${owners}">
